[package]
name = "k8s_quantity_parser"
version = "0.1.0"
authors = ["Alejandro Llanes <sombra.libre@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A simple parser for rust k8s_openapi resource Quantity."
homepage = "https://github.com/sombralibre/k8s-quantity-parser"
repository = "https://github.com/sombralibre/k8s-quantity-parser"
keywords = ["parser", "k8s_openapi", "quantity"]
categories = ["parsing", "parser-implementations"]
documentation = "https://docs.rs/k8s_quantity_parser/0.1.0"

[dependencies]
k8s-openapi = { version = "0.14", default-features = false, features = ["v1_22"] }
regex = "1"
eyre = "0.6"
